--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <ul>
         <li>Vagrant</li>
         <li>Docker</li>
-        <li>Ansible</li>
+        <li>PHP</li>
         <li>Integração Contínua</li>
     </ul>
 </body>
