--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <li>Vagrant</li>
         <li>Docker</li>
         <li>PHP</li>
-        <li>Integração Contínua</li>
+        <li>Integração Contínua: Maturidade e Produtividade no desenvolcimento de software</li>
     </ul>
 </body>
 </html>
