Adicinando curso Kubernets

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <li>Docker</li>
         <li>PHP</li>
         <li>Integração Contínua: Maturidade e Produtividade no desenvolcimento de software</li>
+        <li>Kubernets</li>
     </ul>
 </body>
 </html>
