--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <ul>
-        <li>Vagrant</li>
+        <li>Vagrant: Gerenciando máquinas virtuais</li>
         <li>Docker: lalalalalalalalalal</li>
         <li>PHP</li>
         <li>Integração Contínua: Maturidade e Produtividade no desenvolcimento de software</li>
