--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <ul>
         <li>Vagrant: Gerenciando máquinas virtuais</li>
         <li>Curso de Docker: Criando containers sem dor de cabeça</li>
-        <li>PHP</li>
+        <li>PHP: Infraestrtura como código</li>
         <li>Integração Contínua: Maturidade e Produtividade no desenvolcimento de software</li>
         <li>Kubernets</li>
     </ul>
