--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <li>Curso de Docker: Criando containers sem dor de cabeça</li>
         <li>Ansible: Infraestrtura como código</li>
         <li>Integração Contínua: Maturidade e Produtividade no desenvolcimento de software</li>
-        <li>Kubernets</li>
+        <li>Kubernets:Introdução a orquestração de containers</li>
     </ul>
 </body>
 </html>
